# ChatGPT-RustJS

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Chat.vue  Sidebar.vue  Titlebar.vue
