[package]
name = "ChatGPT-Desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"


[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "system-tray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
